# Physical_AI_and_Humanoid_Robotics

./: .env  .gitignore  README.md  TESTING_CHAT_FIX.md  TESTING_CHAT_ICON.md  TRANSLATION_SEARCH_FEATURES.md  TROUBLESHOOTING.md  check-themes.js  docusaurus.config.js  package-lock.json  package.json  sidebars.js  start_api_server.bat
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
.specify/memory/: claude-context.md  constitution.md
Physical_AI_Humanoid_Robotics_Book/: package.json
backend/: README.md  api.py  main.py  package.json  pyproject.toml  requirements-agent.txt  requirements-validation.txt  requirements.txt  search_service.py  server.js  start_servers.bat  start_servers.py  test_qdrant.py  translation_service.py  validate_pipeline.py
backend/qwen_api/: README.md  main.py  rag_qwen_agent.py  requirements.txt  start_server.bat  test_api.py  verify_endpoints.py
backend/rag_agent/: __init__.py  agent.py  config.py  main.py  models.py  retrieval.py  utils.py
backend/tests/: test_agent.py
backend/validation/: __init__.py  completeness_audit.py  constants.py  main.py  pipeline.py  reporting.py  retrieval.py  similarity_search.py  validation.py
docs/: index.md
docs/module2-digital-twin/: gazebo-physics.md  gazebo-setup.md  intro.md  sensor-simulation.md  unity-rendering.md  urdf-sdf.md
physical-ai-humanoid-robotics/: docusaurus.config.js  package-lock.json  package.json
src/: client-modules.js
translation/: .gitkeep  history-manager.ts  history.json
(+233 files in other folders)
